--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
 }
 
 body{
+    height: 100%;
+    margin: 0;
     box-sizing: border-box;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
@@ -83,7 +85,7 @@ body{
 }
 
 .rodape{
-    padding: 24px;
+    line-height: 50px;
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
     text-align: center;
@@ -91,20 +93,23 @@ body{
     font-size: 1.5rem;
     width: 100%;
     font-weight: 400;
- 
-
+    padding: 0 20px;
 }
+
 
 .cabecalho{
     padding: 2% 0% 0% 15%;
+  
 }
 
 .cabecalho__navbar{
+  
     display: flex;
     gap: 80px;
 }
 
 .cabecalho__navbar__link{
+  
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 600;
@@ -201,13 +206,18 @@ body{
 }
 
 .corpoEcomerce {
+  grid-gap: 5px;  
+  grid-template-columns: repeat(auto-fit, 100px);
+  grid-template-rows: repeat(2, 100px); 
+  height: 100%;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #000000;
 }
 
-.lojaminha {
+.lojaminha{
+  height: 50px;
   align-items: center;
   display: flex;
   justify-content: space-evenly;
@@ -353,6 +363,7 @@ body{
 }
 @media screen and (max-width: 768px) {
 .corpoEcomerce {
+    transform: translateY(-5px); box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
@@ -400,5 +411,9 @@ body{
   flex-wrap: wrap;
 }
 
-}  
+.imgstamanha{
+  
+}
+  
 
+}  
